--- a/Animations/davidbru/style.css
+++ b/Animations/davidbru/style.css
@@ -1,73 +1,90 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
+/* general styling */
+*   {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+body{
+    height: 100vh;
+    width: 100%;
+    background-color:rgb(123, 231, 211);
+    display:flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-image: linear-gradient( 110deg, #F0EFF0 2%, #282828 98% );
 }
-
-#roundAndRound {
+.wrapper{
+    height:400px;
+    width: 100px;
     position: relative;
-    width: 300px;
-    height: 300px;
-    border-radius: 100%;
-    background: linear-gradient(#ffbdbd, #c9c9ff, #e1f7d5);
-
-    animation: rotate 1.5s linear infinite;
+    display: flex;
+    justify-content: center ;
+          
 }
-
-#roundAndRound:after {
-    content: '';
+/* stying for ball */
+.ball{
     position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    background-image: linear-gradient( 290deg, #F0EFF0 2%, #282828 98% );
-    border: solid #fff 10px;
-    border-radius: 100%;
-    animation: rotateInv 1.4s linear infinite;
+    top:0;
+    width: 100px;
+    height: 100px;
+    background-color:rgb(185, 101, 202);
+    border-radius:50%;
+    box-shadow:inset 0 -10px 20px gray;
+    animation:bounce 0.7s cubic-bezier(0.049, 0, 0.89, 0.74) infinite alternate ;
 }
+.shadow{
+    position:absolute;
+    top:400px;
+    height:20px;
+    width:100px;
+    background-color: black;
+    border-radius:50%;
+    box-shadow:0 0 10px black;
+    z-index:-1;
+    animation:shadow 0.7s cubic-bezier(0.049, 0, 0.89, 0.74) infinite alternate ;
+}
+  /*ball animation */
+  @keyframes bounce{
+    0%{
+        transform:translateY(300px); 
+        height: 100px;
+        width: 100px;
 
-#roundAndRound span {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    background: linear-gradient(#ffbdbd, #c9c9ff, #e1f7d5);
-}
-#roundAndRound span:nth-child(1) {
-    filter: blur(5px);
-}
-#roundAndRound span:nth-child(2) {
-    filter: blur(10px);
-}
-#roundAndRound span:nth-child(3) {
-    filter: blur(25px);
-}
-#roundAndRound span:nth-child(4) {
-    filter: blur(50px);
-}
+    }
+    75%{
+        height: 100px;
+        width: 100px;
 
+    }
+    90%{
+        height: 95x;
+        width: 105px;
 
-/*
- * Animation
- */
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
     }
-    100% {
-        transform: rotate(360deg);
+    100%{
+        height: 90px;
+        width: 110px;
+
     }
-}
-@keyframes rotateInv {
-    0% {
-        transform: rotate(360deg);
+  }
+  /* animation shadow */
+  @keyframes shadow{
+    0%{
+        opacity:0.1;
+        height: 20px;
+        width: 110px;
+
     }
-    100% {
-        transform: rotate(0deg);
+    80%{
+        opacity: 0.4;
+        height: 15px;
+        width: 90px;
+
     }
-}
+
+    100%{
+        opacity: 0.5;
+        height:10px;
+        width: 80px;
+
+    }
+  }
